--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 </head>
 <body>
     <header>
-        <h1>Movies Explorer New</h1>
+        <h1>123Movies Explorer New</h1>
     </header>
     <div class="search-container">
         <input type="text" id="search-input" placeholder="Search for a movie...">
