--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 </head>
 <body>
     <header>
-        <h1>123Movies- Explorer New</h1>
+        <h1>123Movies Explorer New HD</h1>
     </header>
     <div class="search-container">
         <input type="text" id="search-input" placeholder="Search for a movie...">
@@ -174,7 +174,7 @@
             <p class="genres" id="modal-genres"></p>
             <p id="modal-overview"></p>
             <p id="modal-release-date"></p>
-            <iframe id="modal-trailer" height="315" allowfullscreen></iframe>
+			<iframe id="modal-trailer" width="560" height="315" frameborder="0" allowfullscreen></iframe>
             <div class="ad-section">
 
 <script type="text/javascript">
