--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 </head>
 <body>
     <header>
-        <h1>Movies Explorer New IHD</h1>
+        <h1>Movies Explorer New THD</h1>
     </header>
     <div class="search-container">
         <input type="text" id="search-input" placeholder="Search for a movie...">
@@ -174,10 +174,9 @@
             <p class="genres" id="modal-genres"></p>
             <p id="modal-overview"></p>
             <p id="modal-release-date"></p>
-			<iframe id="modal-trailer" width="560" height="400" frameborder="0" allowfullscreen></iframe>
+			<iframe id="modal-trailer" width="580" height="360" frameborder="0" allowfullscreen></iframe>
             <div class="ad-section">
-
-<script type="text/javascript">
+			<script type="text/javascript">
 	atOptions = {
 		'key' : '26ab5f7e2864a41f249fc7e5a2522d5d',
 		'format' : 'iframe',
@@ -187,7 +186,6 @@
 	};
 </script>
 <script type="text/javascript" src="//fryboldlymalice.com/26ab5f7e2864a41f249fc7e5a2522d5d/invoke.js"></script>
-			
             </div>
             <button onclick="goBackToMovies()">Back to Movies</button>
         </div>
