--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 </head>
 <body>
     <header>
-        <h1>Movies Explorer New THD</h1>
+        <h1>Movies Explorer New AHD</h1>
     </header>
     <div class="search-container">
         <input type="text" id="search-input" placeholder="Search for a movie...">
@@ -174,8 +174,8 @@
             <p class="genres" id="modal-genres"></p>
             <p id="modal-overview"></p>
             <p id="modal-release-date"></p>
-			<iframe id="modal-trailer" width="580" height="360" frameborder="0" allowfullscreen></iframe>
-            <div class="ad-section">
+			<iframe id="modal-trailer" width="560" height="360" frameborder="0" allowfullscreen></iframe>
+
 			<script type="text/javascript">
 	atOptions = {
 		'key' : '26ab5f7e2864a41f249fc7e5a2522d5d',
