--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <p id="modal-overview"></p>
             <p id="modal-release-date"></p>
 			<iframe id="modal-trailer" width="560" height="360" frameborder="0" allowfullscreen></iframe>
-
+            <div class="ad-section">
 			<script type="text/javascript">
 	atOptions = {
 		'key' : '26ab5f7e2864a41f249fc7e5a2522d5d',
@@ -186,11 +186,11 @@
 	};
 </script>
 <script type="text/javascript" src="//fryboldlymalice.com/26ab5f7e2864a41f249fc7e5a2522d5d/invoke.js"></script>
+
             </div>
             <button onclick="goBackToMovies()">Back to Movies</button>
         </div>
     </div>
-
     <script>
         const API_KEY = '3f45488e50ce5ef5a25ed21f1fcd98f3';
         const BASE_URL = 'https://api.themoviedb.org/3';
