--- a/index.html
+++ b/index.html
@@ -140,14 +140,13 @@
 </head>
 <body>
     <header>
-        <h1>Movies Explorer New AHD</h1>
+        <h1>Movies Explorer</h1>
     </header>
     <div class="search-container">
         <input type="text" id="search-input" placeholder="Search for a movie...">
         <button onclick="searchMovies()">Search</button>
     </div>
     <div class="ad-container">
-
 <script type="text/javascript">
 	atOptions = {
 		'key' : '26ab5f7e2864a41f249fc7e5a2522d5d',
@@ -160,7 +159,6 @@
 <script type="text/javascript" src="//fryboldlymalice.com/26ab5f7e2864a41f249fc7e5a2522d5d/invoke.js"></script>
 
 <script type='text/javascript' src='//fryboldlymalice.com/04/a8/e7/04a8e72e519ef1af64c4bed16f6c43ed.js'></script>
-	
     </div>
     <div class="container" id="movies-container">
         <!-- Movies will be displayed here -->
@@ -174,9 +172,10 @@
             <p class="genres" id="modal-genres"></p>
             <p id="modal-overview"></p>
             <p id="modal-release-date"></p>
-			<iframe id="modal-trailer" width="560" height="360" frameborder="0" allowfullscreen></iframe>
+            <iframe id="modal-trailer" width="560" height="360" frameborder="0" allowfullscreen></iframe>
             <div class="ad-section">
-			<script type="text/javascript">
+                <!-- Adsterra ad placeholder inside modal -->
+<script type="text/javascript">
 	atOptions = {
 		'key' : '26ab5f7e2864a41f249fc7e5a2522d5d',
 		'format' : 'iframe',
